--- a/style.css
+++ b/style.css
@@ -77,8 +77,10 @@ footer {
   color: #000000;
   text-align: center;
   padding: 20px;
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
 }
