--- a/Parcial1/Practica 4/practica4.css
+++ b/Parcial1/Practica 4/practica4.css
@@ -57,9 +57,11 @@ footer {
   color: #000000;
   text-align: center;
   padding: 20px;
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  margin: auto;
+  overflow: hidden;
+  position: relative;
 }
 
