--- a/Parcial1/misestilos.css
+++ b/Parcial1/misestilos.css
@@ -94,3 +94,20 @@ footer {
   font-style: oblique;
   font-weight: 700;
 }
+
+#button {
+  background-color: aqua;
+  border: none;
+  font-size: 30px;
+  width: 500px;
+  padding: 20px;
+  color: black;
+}
+
+.texto {
+  color: black;
+}
+
+a:hover {
+  color: black;
+}
